# cloud_finops_graph_rag

./: LICENSE  README.md  config.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
data/: synthetic_cloud_cost_dataset.csv
graph/: graph_client.py  ingest.py  schema.cypher
rag/: agent.py  answer_generator.py  correction.py  cypher_generator.py  graph_retriever.py  planner.py
tools/: cost_simulator.py
